--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,27 @@
 {
     "name": "axovis/flow-utilities",
     "type": "typo3-flow-plugin",
-    "description": "TYPO3 Flow plugin containing utilities",
-    "license": "MIT",
+    "description": "TYPO3 Flow plugin containing utilities for flow development.",
+    "license": "LGPL-3.0+",
     "require": {
-        "typo3/flow": "~3.0"
+        "typo3/flow": "~3.0",
+        "typo3/swiftmailer": "5.3.*"
     },
+    "authors": [
+        {
+            "name": "Sönke Michelsen",
+            "email": "s.michelsen@axovis.com",
+            "homepage": "http://www.axovis.com",
+            "role": "Developer"
+        }
+    ],
+    "keywords": ["flow","swiftmailer","email","validator","viewhelper"],
     "autoload": {
         "psr-0": {
             "Axovis\\Flow\\Utilities": "Classes"
         }
+    },
+    "extra": {
+        "marketplace-account": "s.michelsen@axovis.com"
     }
 }
