[TASK] Flow 4.0 compatibility - PSR-4 and namespace

--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,16 @@
 {
     "name": "axovis/flow-utilities",
-    "type": "typo3-flow-plugin",
-    "description": "TYPO3 Flow plugin containing utilities for flow development.",
+    "type": "neos-plugin",
+    "description": "Flow plugin containing utilities for flow development.",
     "license": "LGPL-3.0+",
     "require": {
-        "typo3/flow": "~3.0",
-        "typo3/swiftmailer": "5.3.*"
+        "neos/flow": "~4.0",
+        "neos/swiftmailer": "6.0.0"
     },
-    "authors": [
-        {
-            "name": "Sönke Michelsen",
-            "email": "s.michelsen@axovis.com",
-            "homepage": "http://www.axovis.com",
-            "role": "Developer"
-        }
-    ],
     "keywords": ["flow","swiftmailer","email","validator","viewhelper"],
     "autoload": {
-        "psr-0": {
-            "Axovis\\Flow\\Utilities": "Classes"
+        "psr-4": {
+            "Axovis\\Flow\\Utilities\\": "Classes"
         }
-    },
-    "extra": {
-        "marketplace-account": "s.michelsen@axovis.com"
     }
 }
