--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
     "name": "axovis/flow-utilities",
-    "type": "neos-plugin",
-    "description": "Flow plugin containing utilities for flow development.",
+    "type": "typo3-flow-plugin",
+    "description": "TYPO3 Flow plugin containing utilities for flow development.",
     "license": "LGPL-3.0+",
     "require": {
-        "neos/flow": "~4.0",
-        "neos/swiftmailer": "6.0.0"
+        "typo3/flow": "~3.0",
+        "typo3/swiftmailer": "5.4.*"
     },
     "keywords": ["flow","swiftmailer","email","validator","viewhelper"],
     "autoload": {
-        "psr-4": {
-            "Axovis\\Flow\\Utilities\\": "Classes"
+        "psr-0": {
+            "Axovis\\Flow\\Utilities": "Classes"
         }
     }
 }
